--- a/src/app/dice-spinner/dice-spinner.component.scss
+++ b/src/app/dice-spinner/dice-spinner.component.scss
@@ -15,22 +15,43 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
-import { BrowserModule } from '@angular/platform-browser';
-import { NgModule } from '@angular/core';
 
-import { AppComponent } from './app.component';
-import { DiceSpinnerComponent } from './dice-spinner/dice-spinner.component';
+.tile
+{
+    flex-shrink: 0;
+    flex-grow: 0;
 
-@NgModule({
-    declarations: [
-        AppComponent,
-        DiceSpinnerComponent
-    ],
-    imports: [
-        BrowserModule
-    ],
-    providers: [],
-    bootstrap: [AppComponent]
-})
-export class AppModule
-{ }
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+
+    outline: solid 1px lightgray;
+
+    user-select: none;
+}
+
+.tile > div
+{
+    font-size: 10em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.tray
+{
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.viewport
+{
+    width: 50vmin;
+    height: 50vmin;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
