Add WIP multiple spinners

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-dice-spinner>
-</app-dice-spinner>
+<div class="dice-box">
+    <app-dice-spinner>
+    </app-dice-spinner>
+
+    <app-dice-spinner>
+    </app-dice-spinner>
+
+    <app-dice-spinner>
+    </app-dice-spinner>
+</div>
