--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,3 +15,21 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
+
+.dice-box
+{
+    padding: 1em;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // gap: 1em;
+
+    box-sizing: border-box;
+
+    app-dice-spinner
+    {
+        flex-grow: 1;
+    }
+}
