--- a/src/app/dice-spinner/dice-spinner.component.scss
+++ b/src/app/dice-spinner/dice-spinner.component.scss
@@ -16,6 +16,12 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+:host
+{
+    display: block;
+    width: 100%;
+}
+
 .tile
 {
     flex-shrink: 0;
@@ -32,11 +38,14 @@
 
 .tile > div
 {
-    font-size: 10em;
+    font-size: 8em;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+
+    border-left: solid 1px lightgray;
+    border-right: solid 1px lightgray;
 }
 
 .tray
@@ -49,9 +58,13 @@
 
 .viewport
 {
-    width: 100vmin;
-    height: 100vmin;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
+
+    border: solid 1px black;
+    box-sizing: border-box;
+    border-radius: 2em;
 }
