--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 
+app-root
+{
+    height: 100%;
+}
+
 body
 {
     margin: 0;
     padding: 0;
-    background: gray;
+    background: white;
+}
+
+html
+{
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
+body
+{
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
