--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,9 +18,13 @@
 
 .dice-box
 {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
     padding: 1em;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,5 +35,14 @@
     app-dice-spinner
     {
         flex-grow: 1;
+        flex-shrink: 0;
+        flex-basis: 0;
+
+        margin-bottom: 1em;
+    }
+
+    app-dice-spinner:last-child
+    {
+        margin-bottom: 0;
     }
 }
