--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<div class="dice-box">
-    <app-dice-spinner>
-    </app-dice-spinner>
+<div class="content">
+    <div class="dice-box">
+        <app-dice-spinner>
+        </app-dice-spinner>
 
-    <app-dice-spinner>
-    </app-dice-spinner>
+        <app-dice-spinner>
+        </app-dice-spinner>
 
-    <app-dice-spinner>
-    </app-dice-spinner>
+        <app-dice-spinner>
+        </app-dice-spinner>
+    </div>
 </div>
