--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-.dice-box
+.content
 {
     position: absolute;
     top: 0;
@@ -25,12 +25,22 @@
     right: 0;
 
     padding: 1em;
+    box-sizing: border-box;
+}
+
+.dice-box
+{
     display: flex;
     flex-direction: column;
     align-items: center;
     // gap: 1em;
 
-    box-sizing: border-box;
+    max-width: 25em;
+    width: 100%;
+    height: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
 
     app-dice-spinner
     {
