Update spinner design to use alternating black and white tiles

--- a/src/app/dice-spinner/dice-spinner.component.html
+++ b/src/app/dice-spinner/dice-spinner.component.html
@@ -7,27 +7,27 @@
     >
 
     <div #tray class="tray">
-        <div class="tile" style="background: #fee">
+        <div class="tile">
             <div>1</div>
         </div>
 
-        <div class="tile" style="background: #efe">
+        <div class="tile">
             <div>2</div>
         </div>
 
-        <div class="tile" style="background: #fee">
+        <div class="tile">
             <div>3</div>
         </div>
 
-        <div class="tile" style="background: #efe">
+        <div class="tile">
             <div>4</div>
         </div>
 
-        <div class="tile" style="background: #fee">
+        <div class="tile">
             <div>5</div>
         </div>
 
-        <div class="tile" style="background: #efe">
+        <div class="tile">
             <div>6</div>
         </div>
     </div>
