--- a/src/app/dice-spinner/dice-spinner.component.scss
+++ b/src/app/dice-spinner/dice-spinner.component.scss
@@ -75,7 +75,8 @@
     margin-left: auto;
     margin-right: auto;
 
-    // border: solid 6px black;
     box-sizing: border-box;
     border-radius: 2em;
+
+    box-shadow: 0 2px 5px black;
 }
