--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="content">
     <div class="dice-box">
-        <app-dice-spinner [faces]="faces">
+        <app-dice-spinner [faces]="sixSides">
         </app-dice-spinner>
 
-        <app-dice-spinner [faces]="faces">
+        <app-dice-spinner [faces]="tenSides">
         </app-dice-spinner>
 
-        <app-dice-spinner [faces]="faces">
+        <app-dice-spinner [faces]="twentySides">
         </app-dice-spinner>
     </div>
 </div>
